--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="title-bar">
-  <div class="title-bar-title">Rent Finds</div>
+  <div class="title-bar-title">Rent Findsdddd</div>
   </div>
 
   <div ng-view></div>
