--- a/rentals/rentals.html
+++ b/rentals/rentals.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="columns small-8">
 				<div class="label">{{rental.city}}</div>
-				<h3><a href="/app/#details/{{rental.$id}}">{{rental.title}}</a></h3>
+				<h3><a href="#details/{{rental.$id}}">{{rental.title}}</a></h3>
 				<p>{{rental.phone}}</p>
 			</div>
 		</div>
@@ -38,7 +38,7 @@
 			</div>
 			<div class="small-8 columns">
 				<div class="label">{{rental.city}}</div>
-				<h3><a href="/app/#details/{{rental.$id}}">{{rental.title}}</a></h3>
+				<h3><a href="#details/{{rental.$id}}">{{rental.title}}</a></h3>
 				<p>{{rental.phone}}</p>
 			</div>
 		</div>
